--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  asp: ^1.3.0
+  chat_bubbles: ^1.4.1
+  chat_gpt_flutter: ^1.0.13
 
 dev_dependencies:
   flutter_test:
