--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   asp: ^1.3.0
   chat_bubbles: ^1.4.1
-  chat_gpt_flutter: ^1.0.13
+  chat_gpt_flutter: 1.0.10
 
 dev_dependencies:
   flutter_test:
